apps/kube/forgejo/manifest/forgejo-gate-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: forgejo-gate
    namespace: forgejo
    labels:
        app: forgejo-gate
        kbve.com/category: development
        kbve.com/stack: core
        kbve.com/managed-by: argocd
spec:
    type: ClusterIP
    selector:
        app: forgejo-gate
    ports:
        - name: http
          port: 5678
          targetPort: 5678
          protocol: TCP
