apps/kube/forgejo/manifest/mc-git-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: mc-git-route
    namespace: forgejo
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - mc.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /api/
          backendRefs:
              - name: forgejo-http
                port: 3000
        - matches:
              - path:
                    type: PathPrefix
                    value: /v2/
          backendRefs:
              - name: forgejo-http
                port: 3000
        - matches:
              - path:
                    type: PathPrefix
                    value: /-/
          backendRefs:
              - name: forgejo-http
                port: 3000
        - matches:
              - path:
                    type: PathPrefix
                    value: /KBVE/
          backendRefs:
              - name: forgejo-http
                port: 3000
